added PDF files

--- a/Lectures/P03 - Data Structures I.ipynb
+++ b/Lectures/P03 - Data Structures I.ipynb
@@ -17,17 +17,17 @@
     "\n",
     "## Title : P03: Data Structures I (List, Tuples)\n",
     "\n",
-    "#### Name: \n",
+    "#### Name: Justin Chong\n",
     "\n",
-    "#### IC Number:\n",
+    "#### IC Number: 960327-07-5097\n",
     "\n",
-    "#### Date :\n",
+    "#### Date : 19/6/2023\n",
     "\n",
-    "#### Introduction : \n",
+    "#### Introduction : Learning about Python data structures that are lists and tuples.\n",
     "\n",
     "\n",
     "\n",
-    "#### Conclusion :\n",
+    "#### Conclusion : Able to understand the lists and tuples and how to use them.\n",
     "\n",
     "\n",
     "\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -173,16 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "China's population is as large as Malaysia's by at least 44 times\n",
-      "India's population is as large as Malaysia's by at least 43 times\n",
-      "United States's population is as large as Malaysia's by at least 10 times\n"
+      "The population of China is 44 times bigger than Malaysia's population\n",
+      "The population of India is 43 times bigger than Malaysia's population\n",
+      "The population of United States is 10 times bigger than Malaysia's population\n"
      ]
     }
    ],
@@ -195,10 +195,14 @@
     "\n",
     "\n",
     "# How many times bigger is the population of China, India, and the US relative to Malaysia?\n",
+    "\n",
     "for i in countries:\n",
+    "    malaysia_population = [item[2] for item in countries if item[0] == 'Malaysia']\n",
+    "    \n",
     "    if i[0] == \"Malaysia\":\n",
     "        continue\n",
-    "    print(f\"{i[0]}'s population is as large as Malaysia's by at least {i[2] // 31} times\")"
+    "    \n",
+    "    print(f\"The population of {i[0]} is {i[2] // malaysia_population[0]} times bigger than Malaysia's population\")"
    ]
   },
   {
@@ -305,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +375,7 @@
     "print((sorted(colors, reverse=True)))\n",
     "\n",
     "#pop\n",
-    "colors.pop() # with no index stated, pop method removes the last index element\n",
+    "colors.pop()\n",
     "print(colors)"
    ]
   },
@@ -445,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -551,18 +555,24 @@
      "output_type": "stream",
      "text": [
       "<class 'list'>\n",
-      "['blue', 'cyan', 'green', 'purple']\n",
-      "blue\n",
-      "Blue\n",
+      "['red', 'yellow', 'green', 'blue', 'purple', 'cyan']\n",
+      "red\n",
+      "Red\n",
       "\n",
-      "cyan\n",
-      "Cyan\n",
+      "yellow\n",
+      "Yellow\n",
       "\n",
       "green\n",
       "Green\n",
       "\n",
+      "blue\n",
+      "Blue\n",
+      "\n",
       "purple\n",
       "Purple\n",
+      "\n",
+      "cyan\n",
+      "Cyan\n",
       "\n"
      ]
     }
@@ -573,7 +583,7 @@
     "\n",
     "for color in colors:\n",
     "    print(color)\n",
-    "    print((color.title())) # there is title(), upper(), and lower()\n",
+    "    print((color.title()))\n",
     "    print()"
    ]
   },
@@ -605,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -651,14 +661,14 @@
    ],
    "source": [
     "#try with longer lists - 10 million numbers\n",
-    "print(find(9999999, list(range(10_000_000))))  \n",
-    "print(find(99, list(range(10_000_000))))   \n",
-    "print(find('ah', list(range(10_000_000))))"
+    "print(find(9999999, list(range(10000000))))  \n",
+    "print(find(99, list(range(10000000))))   \n",
+    "print(find('ah', list(range(10000000))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +677,7 @@
        "{'Apple', 'Banana', 'Durian', 'Orange'}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -708,18 +718,19 @@
     "num = [7, 8, 120, 25, 44, 20, 27]\n",
     "def remove_even(x):\n",
     "    ## write your code here ##\n",
-    "#     nl = x.copy()\n",
+    "    \n",
+    "#     newList = x.copy()\n",
     "#     for i in x:\n",
     "#         if i % 2 == 0:\n",
-    "#             nl.remove(i)\n",
-    "#     return nl\n",
+    "#             newList.remove(i)\n",
+    "#     return newList\n",
     "\n",
-    "    nl = []\n",
+    "    newList = []\n",
     "    for i in x:\n",
     "        if i % 2 != 0:\n",
-    "            nl.append(i)\n",
-    "    return nl\n",
-    "\n",
+    "            newList.append(i)\n",
+    "    return newList\n",
+    "    \n",
     "nl = remove_even(num)\n",
     "print(nl)     # answer should be [7, 25, 27]"
    ]
@@ -940,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +960,7 @@
        "5"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1026,16 +1037,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<filter object at 0x000001C0C867C880>\n",
+      "<filter object at 0x00000264E51FDCA0>\n",
       "[2, 6, 8]\n",
-      "<map object at 0x000001C0C867E020>\n",
+      "<map object at 0x00000264E51FDF10>\n",
       "[4, 9, 25, 36, 49, 64]\n"
      ]
     }
@@ -1187,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1218,37 +1229,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variable            Type        Data/Info\n",
-      "-----------------------------------------\n",
-      "a                   list        n=10\n",
-      "b                   list        n=5\n",
-      "c                   list        n=0\n",
-      "cars                list        n=7\n",
-      "color               str         purple\n",
-      "colors              list        n=4\n",
-      "comparePopulation   function    <function comparePopulati<...>on at 0x000001C0C866D750>\n",
-      "countries           list        n=4\n",
-      "f                   function    <function <lambda> at 0x000001C0CA249360>\n",
-      "find                function    <function find at 0x000001C0C866E5F0>\n",
-      "h                   map         <map object at 0x000001C0C867E020>\n",
-      "i                   list        n=3\n",
-      "list_of_lists       list        n=3\n",
-      "myfunc              function    <function myfunc at 0x000001C0C866E4D0>\n",
-      "new_list            list        n=2\n",
-      "nl                  list        n=3\n",
-      "num                 list        n=7\n",
-      "numbers             list        n=7\n",
-      "power               function    <function power at 0x000001C0CA24BBE0>\n",
-      "remove_even         function    <function remove_even at 0x000001C0CA248EE0>\n",
-      "union_of_lists      function    <function union_of_lists at 0x000001C0CA24B6D0>\n",
-      "x                   map         <map object at 0x000001C0C867C880>\n"
+      "Variable   Type        Data/Info\n",
+      "--------------------------------\n",
+      "a          list        n=10\n",
+      "b          list        n=5\n",
+      "f          function    <function <lambda> at 0x000002335839D3A0>\n",
+      "fruits     list        n=5\n",
+      "my_list    list        n=3\n",
+      "myfunc     function    <function myfunc at 0x000002335839D040>\n",
+      "x          map         <map object at 0x000002335838ACD0>\n"
      ]
     }
    ],
@@ -1258,36 +1254,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variable            Type        Data/Info\n",
-      "-----------------------------------------\n",
-      "a                   list        n=10\n",
-      "b                   list        n=5\n",
-      "c                   list        n=0\n",
-      "cars                list        n=7\n",
-      "color               str         purple\n",
-      "colors              list        n=4\n",
-      "comparePopulation   function    <function comparePopulati<...>on at 0x000001C0C866D750>\n",
-      "countries           list        n=4\n",
-      "f                   function    <function <lambda> at 0x000001C0CA249360>\n",
-      "find                function    <function find at 0x000001C0C866E5F0>\n",
-      "h                   map         <map object at 0x000001C0C867E020>\n",
-      "i                   list        n=3\n",
-      "list_of_lists       list        n=3\n",
-      "new_list            list        n=2\n",
-      "nl                  list        n=3\n",
-      "num                 list        n=7\n",
-      "numbers             list        n=7\n",
-      "power               function    <function power at 0x000001C0CA24BBE0>\n",
-      "remove_even         function    <function remove_even at 0x000001C0CA248EE0>\n",
-      "union_of_lists      function    <function union_of_lists at 0x000001C0CA24B6D0>\n",
-      "x                   map         <map object at 0x000001C0C867FFD0>\n"
+      "Variable   Type        Data/Info\n",
+      "--------------------------------\n",
+      "a          list        n=10\n",
+      "b          list        n=5\n",
+      "f          function    <function <lambda> at 0x000002335839D3A0>\n",
+      "fruits     list        n=5\n",
+      "my_list    list        n=3\n",
+      "x          map         <map object at 0x000002335838ACD0>\n"
      ]
     }
    ],
@@ -1309,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1300,6 @@
       "<class 'tuple'>\n",
       "4\n",
       "hi\n",
-      "bye\n",
       "('hike', 13)\n"
      ]
     }
@@ -1333,7 +1313,6 @@
     "\n",
     "#tup[2] = 'bye' # tuple element cannot be changed\n",
     "tup = (1, 2, 'bye') # tuple can only be overridden\n",
-    "print(tup[2])\n",
     "\n",
     "x,y,z = (42, 13, \"hike\")\n",
     "\n",
@@ -1406,14 +1385,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<zip object at 0x000001C0CA2A0240>\n",
+      "<zip object at 0x000002CE85D767C0>\n",
       "[('Kelly', 52.3), ('Bill', 98.7), ('Indran', 70.2)]\n"
      ]
     }
