--- a/Lectures/P04 - Data Structures II.ipynb
+++ b/Lectures/P04 - Data Structures II.ipynb
@@ -17,17 +17,17 @@
     "\n",
     "## Title : Data Structures II (Dictionary)\n",
     "\n",
-    "#### Name: \n",
+    "#### Name: Justin Chong\n",
     "\n",
-    "#### IC Number:\n",
+    "#### IC Number: 960327-07-5097\n",
     "\n",
-    "#### Date :\n",
+    "#### Date : 20/6/2023\n",
     "\n",
-    "#### Introduction : \n",
+    "#### Introduction : Learning about Python dictionary data structure.\n",
     "\n",
     "\n",
     "\n",
-    "#### Conclusion :\n",
+    "#### Conclusion : Able to understand dictionary and how to use it.\n",
     "\n",
     "\n",
     "\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "510 ms ± 11.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "932 ms ± 46.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -164,10 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -274,7 +272,6 @@
    ],
    "source": [
     "# Assigning a dictionary with three key-value pairs, two entries have the same key...\n",
-    "# The existing key will be overridden by the new key\n",
     "residents = {'Puffin' : 104, 'Puffin' : 105, 'Burmese Python' : 106}\n",
     "\n",
     "print(residents.keys())\n",
@@ -323,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +351,7 @@
        " 'e': 'looser'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,26 +379,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Debbie 972.0\n",
-      "Ishak 918.0\n",
-      "Rajah 1242.0\n",
-      "Siti 999.0\n"
+      "{'Debbie': 972.0, 'Ishak': 918.0, 'Rajah': 1242.0, 'Siti': 999.0}\n"
      ]
     }
    ],
    "source": [
     "# write your code here\n",
-    "ledger = {'Debbie': '900', 'Ishak': '850', 'Rajah': '1150', 'Siti': '925'}\n",
     "\n",
-    "for k, v in list(ledger.items()):\n",
-    "    print(k, round(float(v) * 1.08, 2))"
+    "ledger = {'Debbie': '900', 'Ishak': '850', 'Rajah': '1150', 'Siti': '925'}\n",
+    "newLedger = {}\n",
+    "for name, allowance in ledger.items():\n",
+    "    updatedAllowance = round(int(allowance) * 1.08, 2)\n",
+    "    newLedger[name] = updatedAllowance\n",
+    "    \n",
+    "print(newLedger)"
    ]
   },
   {
@@ -415,24 +413,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Debbie 972.0\n",
-      "Ishak 918.0\n",
-      "Rajah 1242.0\n",
-      "Siti 999.0\n"
+      "{'Debbie': 972.0, 'Ishak': 918.0, 'Rajah': 1242.0, 'Siti': 999.0}\n"
      ]
     }
    ],
    "source": [
     "# Write your code here\n",
-    "newLedger = {'Debbie': '900', 'Ishak': '850', 'Rajah': '1150', 'Siti': '925'}\n",
-    "displayLedger = {print(k, round((float(v) * 1.08), 2)) for k, v in list(newLedger.items())}\n"
+    "\n",
+    "updatedLedger = {name: round(int(allowance) * 1.08, 2) for name, allowance in list(ledger.items())}\n",
+    "print(updatedLedger)"
    ]
   },
   {
@@ -501,37 +497,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1687242106.853012"
+       "1687748560.8085773"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import time\n",
-    "time.time()     # what does this number represent? this is like a timer"
+    "time.time()     # what does this number represent?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2023, 6, 20, 14, 20, 59, 384339)"
+       "datetime.datetime(2023, 6, 26, 11, 2, 41, 798564)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,14 +566,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Time for LIST lookup: ', 0.3090066909790039)\n",
+      "('Time for LIST lookup: ', 0.5270066261291504)\n",
       "('Time for DICT lookup: ', 0.0)\n"
      ]
     }
@@ -595,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -605,14 +601,17 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[77], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43m(\u001b[49m\u001b[43mt2\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mt1\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mt3\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mt2\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43m(\u001b[49m\u001b[43mt2\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mt1\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mt3\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mt2\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mZeroDivisionError\u001b[0m: float division by zero"
      ]
     }
    ],
    "source": [
-    "(t2-t1)/(t3-t2)       # ugh.... because dictionary computation time is close to 0, so anything divided by zero is infinite\n",
-    "                      # meaning a zero division error"
+    "(t2-t1)/(t3-t2)       # ugh.... \n",
+    "\n",
+    "# expected output is 205.18954528838665 but...\n",
+    "# because dictionary computation time is close to 0, so anything divided by zero is infinite\n",
+    "# meaning a zero division error\n"
    ]
   },
   {
@@ -626,14 +625,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "104 ms ± 2.45 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "141 ms ± 12.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -643,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -652,7 +651,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "52.3 ns ± 0.327 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+      "99.6 ns ± 6.02 ns per loop (mean ± std. dev. of 7 runs, 10000000 loops each)\n"
      ]
     }
    ],
@@ -662,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +715,7 @@
        "{'bob': 'bob@example.com', 'Jane': 'jane@example.com'}"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +803,7 @@
      "output_type": "stream",
      "text": [
       "<class 'tuple'>\n",
-      "{'Jane': 'info@example.com', 'Julie': 'info@example.com', 'Bob': 'info@example.com', 'Key': 'info@example.com'}\n",
+      "{'Jane': 'info@example.com', 'Julie': 'info@example.com'}\n",
       "bob@example.com\n",
       "None\n"
      ]
@@ -835,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -862,13 +861,13 @@
     "# write your code from here on\n",
     "# TIP: Use the keys from 'cart' to access the price in 'prices'\n",
     "# HINT: put dict.get() method to good use\n",
-    "sum = 0\n",
+    "\n",
+    "total_price = 0\n",
     "for item, quantity in cart.items():\n",
     "    if (prices.get(item) == None):\n",
     "        prices[item] = 1 \n",
-    "    sum += (prices.get(item) * quantity)\n",
-    "print(f'RM {sum}')\n",
-    "\n"
+    "    total_price += (prices.get(item) * quantity)\n",
+    "print(f'RM {total_price}')"
    ]
   }
  ],
