--- a/Lectures/P05 - Processing Data Files.ipynb
+++ b/Lectures/P05 - Processing Data Files.ipynb
@@ -17,17 +17,17 @@
     "\n",
     "## Title : Processing Data Files\n",
     "\n",
-    "#### Name: \n",
+    "#### Name: Justin Chong\n",
     "\n",
-    "#### IC Number:\n",
+    "#### IC Number: 960327-07-5097\n",
     "\n",
-    "#### Date :\n",
+    "#### Date : 21/6/2023\n",
     "\n",
-    "#### Introduction : \n",
+    "#### Introduction : Learning about processing data files such as JSON and CSV files, using reading and writing operations in Python.\n",
     "\n",
     "\n",
     "\n",
-    "#### Conclusion :\n",
+    "#### Conclusion : Able to execute the reading and writing operations when processing data files such as JSON files.\n",
     "\n",
     "\n",
     "\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -326,6 +326,8 @@
    ],
    "source": [
     "with open('.\\\\Data files\\\\pythagoras.txt','r') as input_file:\n",
+    "# File is in Data files folder, so need to change directory\n",
+    "# with open('..\\.\\\\Data files\\\\pythagoras.txt','r') as input_file:\n",
     "\n",
     "    # Throw away the first 3 lines. They do not contain the quotes.\n",
     "    # Notice that we are reading the first 3 lines but we are not doing anything with them\n",
@@ -381,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +569,7 @@
        "2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -746,14 +748,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'type': 'home', 'number': '212 555-1234', 'active': True, 'status': [1, 0, 4], 'user': {'ID': 'benley83', 'passcode': '432Kd3D'}}\n"
+      "{'type': 'home', 'number': '202 555-1234', 'active': True, 'status': [1, 0, 4], 'user': {'ID': 'benley83', 'passcode': '432Kd3D'}}\n"
      ]
     }
    ],
@@ -773,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -830,6 +832,9 @@
    ],
    "source": [
     "with open('./Data files/top-rated-movies-01.json') as json_data:\n",
+    "# file is in Data files folder, need to change directory\n",
+    "# with open('.././Data files/top-rated-movies-01.json') as json_data:\n",
+    "\n",
     "    d = json.load(json_data)\n",
     "    print(d)"
    ]
@@ -843,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1002,10 +1007,11 @@
     }
    ],
    "source": [
-    "with open('./Data Files/top-rated-movies-01.json') as json_data:\n",
+    "with open('../Data Files/top-rated-movies-01.json') as json_data:\n",
     "    d = json.load(json_data)\n",
     "    \n",
     "    # write your code after this line\n",
+    "    \n",
     "    for index, movie in enumerate(d):\n",
     "        print(f'{index} Title: {movie[\"title\"]}  Rating: {movie[\"imdbRating\"]}')"
    ]
@@ -1036,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -1117,10 +1123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1132,7 +1136,7 @@
     }
    ],
    "source": [
-    "vehicle = load_csv('./Data Files/kenderaan.csv', delim=';')\n",
+    "vehicle = load_csv('.././Data Files/kenderaan.csv', delim=';')\n",
     "\n",
     "print(vehicle[0])   # header stuff\n",
     "print(vehicle[1])\n",
@@ -1150,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1185,6 +1189,8 @@
     }
    ],
    "source": [
+    "# write your code here\n",
+    "\n",
     "all_values = [list[2] for list in vehicle]\n",
     "unique_values = set(all_values)\n",
     "\n",
@@ -1202,7 +1208,8 @@
     "                inactiveCars += int(carNumbers)\n",
     "            \n",
     "    print(f' Total number of cars: {activeCars + inactiveCars}')\n",
-    "    print(f' Ratio of active to inactive cars: {round((activeCars / inactiveCars), 2)}')"
+    "    print(f' Ratio of active to inactive cars: {round((activeCars / inactiveCars), 2)}')\n",
+    "    \n"
    ]
   }
  ],
