added week 3 materials

--- a/Lectures/P08 - Data Visualization.ipynb
+++ b/Lectures/P08 - Data Visualization.ipynb
@@ -18,17 +18,17 @@
     "\n",
     "## Title : Data Visualization\n",
     "\n",
-    "#### Name: \n",
+    "#### Name: Justin Chong\n",
     "\n",
-    "#### IC Number:\n",
+    "#### IC Number: 960327-07-5097\n",
     "\n",
-    "#### Date :\n",
+    "#### Date : 27/6/2023\n",
     "\n",
-    "#### Introduction : \n",
+    "#### Introduction : Learning about plotting graphs with Matplotlib library.\n",
     "\n",
     "\n",
     "\n",
-    "#### Conclusion :\n",
+    "#### Conclusion : Getting used to plotting with Matplotlib and its multiple plot variants.\n",
     "\n",
     "\n",
     "\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -511,8 +511,8 @@
     "n = 1\n",
     "\n",
     "for ax in axes5:\n",
-    "    y5 = x5 ** n\n",
-    "    ax.plot(x5, y5, 'r')\n",
+    "    y = x ** n\n",
+    "    ax.plot(x, y, 'r')\n",
     "    ax.set_xlabel('x')\n",
     "    ax.set_ylabel('y')\n",
     "    ax.set_title(f'$x^{n}$')\n",
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1488,7 @@
        "Text(0, 0.5, '[CO2]')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1540,7 @@
        "Text(0, 0.5, '[Temp (°C)]')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1957,7 +1957,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
