--- a/Lectures/P12 - Regular Expressions - Part 2.ipynb
+++ b/Lectures/P12 - Regular Expressions - Part 2.ipynb
@@ -17,17 +17,17 @@
     "\n",
     "## Title :  Regular Expressions - Part 2\n",
     "\n",
-    "#### Name: \n",
+    "#### Name: Chong Mun Chen\n",
     "\n",
-    "#### IC Number:\n",
+    "#### IC Number: 960327-07-5097\n",
     "\n",
-    "#### Date :\n",
+    "#### Date : 3/7/2023\n",
     "\n",
-    "#### Introduction : \n",
+    "#### Introduction : Learning to Web Scrape with matching Regex.\n",
     "\n",
     "\n",
     "\n",
-    "#### Conclusion :\n",
+    "#### Conclusion : Getting more familiar with the concept of Web Scraping and with Regex used.\n",
     "\n",
     "\n",
     "\n",
